# betel-nut-classfication

./: LBAmodel_index.py  README.md  draw_plot.py  features_index.py  features_vis.py  resnet_index.py  run.sh  save_trace_model.py  svm.py  svm_index.py  test_all_models_index.py  train_LBAmodel_res.py  train_features.py
Betel_publish/: config.ini
Betel_publish/betel_display/: CMakeLists.txt  MessageQue.h  betelnet.pt  betelthread.cpp  betelthread.h  cluster_pca_stand.json  main.cpp  widget.cpp  widget.h  widget.ui
cfg/: cfg.py
data/: dataset.py  res_dataset.py  transform.py
model/: BetelNet.py  ConvNet.py  __init__.py
model/myResNeSt/: resnest.py  resnet.py
model/myResNet/: ResNet.py  __init__.py
old_model/myMobilenet/: mobilenetv2.py  mobilenetv3.py
old_model/myResNet/: ResNet.py  __init__.py
old_model/myVIT/: vit.py
pca/: PCA.py  pca_vis.py  save_features.py
ready_dataset/: copy.py  move.py  select_dataset.py
tool/: cluster.py  loss.py  regular.py  stand_feture.py  tom.py
